@@ -1,24 +1,0 @@
-/*
-   D-Bus Java Bindings
-   Copyright (c) 2005-2006 Matthew Johnson
-
-   This program is free software; you can redistribute it and/or modify it
-   under the terms of either the GNU General Public License Version 2 or the
-   Academic Free Licence Version 2.1.
-
-   Full licence texts are included in the COPYING file with this program.
-*/
-package org.freedesktop.dbus;
-
-/**
- * Thrown by a DBusAsyncReply if no reply has been received 
- * and you are trying to recover the reply.
- */
-@SuppressWarnings("serial")
-public class NoReply extends DBusExecutionException
-{
-   public NoReply(String message)
-   {
-      super (message);
-   }
-}
